--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -1,18 +1,14 @@
-<h2> Heres yo answers! </h2>
+<div class="user-question answerbox">
+  <h3> <%= @question.capitalize %>: </h3>
+  <p> -you </p>
+</div>
 
 <br>
 
-
-<h3> <%= @question.capitalize %>: </h3>
-<p> -you </p>
-
-
-<br>
-
-
-<h4> <%= @answer %> </h4>
-<p> -your coach</p>
-
+<div class="coach-answer answerbox">
+  <h4> <%= @answer %> </h4>
+  <p> -your coach</p>
+</div>
 <br>
 
 <%= link_to "Ask another question", ask_path %>
