--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,6 +1,4 @@
-<h1> Homie aks about me</h1>
-
-<form action="answer">
-  <input type="text" name="question" placeholder="Asks yo question to the coach">
-  <input type="submit" value="Ask!">
+<form action="answer" id="ask-input">
+  <input type="text" name="question" placeholder="Asks yo question to the coach" class="question-bar">
+  <input type="submit" class="ask-btn" value="Ask!">
 </form>
